# Sound2Text-Summarizer-repository-files

./: .gitignore  .gitignore_  CONTRIBUTING.md  Contribution.md  README.md  pyproject.toml  requirements.txt  tqdm python-dotenv
.github/workflows/: ci.yml
examples/: transcribe_and_summarize.py
models/: README.md
pycache/ *.pyc venv/ .env *.wav *.mp3 outputs/: mp3
src/sound2text/: cli.py  pipeline.py  summarize.py  transcribe.py
src/sound2text/utils/: audio.py  text.py
tests/: test_pipeline_smoke.py
