[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sound2text"
version = "0.1.0"
description = "Convert Audio -> Text -> Summary"
readme = "README.md"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}

[tool.black]
line-length = 88
